--- a/src/mdx-files/faqs.mdx
+++ b/src/mdx-files/faqs.mdx
@@ -7,11 +7,11 @@ export const metadata = {
 
 ## General
 
-### How is Brace.to different from Raindrop, Pocket & Google Bookmarks?
+### How is Justnote different from Evernote, Google Keep & Apple Notes?
 
-Brace.to is a privacy-focused bookmark manager. We offer end-to-end encryption with an encryption key only you know. Our app encrypts everything, including all your saved links, and only you can decrypt them and see the content inside.
+Justnote is a privacy-focused note-taking app that offers end-to-end encryption with an encryption key only you know. Our app encrypts everything, including all your saved notes, and only you can decrypt them and see the content inside.
 
-### What are the benefits of using Brace.to?
+### What are the benefits of using Justnote?
 
 1. Your account cannot be locked, banned, or deleted by anyone, as it is cryptographically generated. Your Secret Key is required to access and modify it.
 2. No one can see the content inside your data, as everything is encrypted. Your data cannot be used to create targeted ads, and if your data is stolen, no information is leaked.
@@ -19,9 +19,9 @@ Brace.to is a privacy-focused bookmark manager. We offer end-to-end encryption w
 
 ### What do you mean by encrypting everything?
 
-Every file generated to store your data is encrypted, such as a file of a saved link and its information or a file of your app settings.
+Every file generated to store your data is encrypted, such as a file of a saved note and its information or a file of your app settings.
 
-### How does end-to-end encryption work in Brace.to?
+### How does end-to-end encryption work in Justnote?
 
 Our app encrypts your data on your device with your Secret Key. Only your encrypted content leaves your device to be stored on servers. At the same time, your Secret Key always stays in your device, ensuring that only you know your Secret Key. No one can see the content inside your encrypted content because only your Secret Key can decrypt it. Your encrypted data must be downloaded to your device to decrypt and access the content inside.
 
@@ -33,19 +33,19 @@ It guarantees that only you can decrypt your data and see its content. But if yo
 
 No, we take data privacy very seriously. There are no trackers, cookies, or fingerprinting done.
 
-### Does Brace.to work on both web and mobile platforms?
+### Does Justnote work on both web and mobile platforms?
 
-Yes. Our web app supports Chrome, Firefox, Safari, and similar browsers on desktops, smartphones, and tablets. We also have an iOS app on [the App Store](https://apps.apple.com/us/app/id1531456778) and an Android app on [Google Play](https://play.google.com/store/apps/details?id=com.bracedotto).
+Yes. Our web app supports Chrome, Firefox, Safari, and similar browsers on desktops, smartphones, and tablets. We also have an iOS app on [the App Store](https://apps.apple.com/us/app/justnote-note-taking-app/id1570111019) and an Android app on [Google Play](https://play.google.com/store/apps/details?id=com.justnotecc).
 
-### Is Brace.to open source?
+### Is Justnote open source?
 
-Yes, our source code is published on [GitHub](https://github.com/stxapps/brace-client).
+Yes, our source code is published on [GitHub](https://github.com/stxapps/justnote-client).
 
 ## Pricing
 
-### How much does Brace.to cost?
+### How much does Justnote cost?
 
-Brace.to is free, and we offer a simple, no-tricks subscription plan to unlock all extra features. Unlocking all extra features is around $4.99 per year with a 14-day free trial.
+Justnote is free, and we offer a simple, no-tricks subscription plan to unlock all extra features. Unlocking all extra features is around $4.99 per year with a 14-day free trial.
 
 ### What is the catch of the free tier? How long will it be free?
 
@@ -53,7 +53,7 @@ Our business model is to create a lean, useful piece of software that grows with
 
 We intend to keep all the current free features free forever and never show advertisements. We believe if our service is valuable, our users will support us. We wouldn't force it in any way. If users aren't ready, they can always close the popup and continue using our service.
 
-### Does Brace.to show ads?
+### Does Justnote show ads?
 
 No, we do not show ads. We intend to never show advertisements. We don't rent, sell, or share your information with other companies. Our optional paid subscription is the only way we make money.
 
@@ -81,7 +81,7 @@ We'll keep an eye on it. Our payment processing services are constantly adding n
 
 ### I've subscribed, but I can't find it?
 
-If you visit Brace.to and extra features are still locked, please go to Settings -> Subscription -> Restore purchases. If the issue persists, please feel free to [contact us](https://brace.to/#support).
+If you visit Justnote and extra features are still locked, please go to Settings -> Subscription -> Restore purchases. If the issue persists, please feel free to [contact us](https://justnote.cc/#support).
 
 ## Sign Up and Sign In
 
@@ -120,6 +120,7 @@ You'll need your Secret Key to access your account, such as when you sign in on 
 Your Secret Key cannot be changed or reset. As it's used to encrypt your content file by file, if you change your Secret Key, every file needs to be decrypted with your old Secret Key and encrypted again with your new Secret Key.
 
 ### What can I do if I lose my Secret Key?
+
 If you've signed in on any device and you can still access it, we recommend:
 1. Export all your data (Settings -> Data -> Export All Data)
 2. Create a new account
@@ -127,28 +128,22 @@ If you've signed in on any device and you can still access it, we recommend:
 
 ## Features
 
-### Why do my links not show the names or display images?
-
-Extracting the title and image from a link takes some time, usually less than one hour. Links' titles and images will be shown after the extraction is complete.
-
-### How does Brace.to get the name and image of a link?
-
-Our app sends the link to our server to extract the title and image. We send it without other information, and this feature can be disabled.
-
-Sometimes, our server might retrieve incorrect link titles or images as some websites think we're bots or crawlers and block us, or some guide us to the bad ones to use. We open-source our retrieval logic on [GitHub](https://github.com/stxapps/brace-server-worker), and we'll keep improving it.
-
 ### Can I create new folders and subfolders or lists and nested lists?
 
 Yes, please go to Settings -> Lists. You can create a new list and move it into any list.
 
-### Can I choose a card layout on my desktop and a list layout on my phone?
+### Does Justnote have a dark mode/dark theme?
 
-Yes, you can have a different layout on each device. To do so, go to Settings -> Misc. -> Layout View and select "Device" first.
+Yes, we do. You need to sign in first, and you can change the app's appearance in Settings -> Misc. Our dark is dark grey, not true black or AMOLED black.
 
-### Does Brace.to have a dark mode/dark theme?
-
-Yes, we do. You can change the app's appearance in Settings -> Misc. Our dark is dark grey, not true black or AMOLED black.
-
-### Can I share my lists?
+### Can I create and share a link to my note?
 
 We're sorry it's impossible now. All data are encrypted, and only you can decrypt them and see the content inside. We'll also need to consider laws and regulations. As a company, we might need to block or remove some content. (We don't want to, but we need to comply.) 
+
+### Can I print or share my note as a PDF?
+
+Yes. On the web, please select the note's options menu and choose View as Webpage. On mobile, please select the note's options menu and choose Export as PDF or Share.
+
+### Can I attach images, audio, PDFs, or docs?
+
+You can insert images in Justnote by choosing an image icon in the text editor toolbar. We don't support other attachment types like PDF yet, but we'll look into it.
