--- a/src/mdx-files/index.mdx
+++ b/src/mdx-files/index.mdx
@@ -1,40 +1,36 @@
 import appScreenshot from '../images/app-screenshot.png';
 
-export const title = 'Welcome to Brace.to documentation';
+export const title = 'Welcome to Justnote documentation';
 
 export const metadata = {
   title,
-  description: 'Our documentation is designed to empower you, helping you understand Brace\'s features, navigate its interface, and troubleshoot any issues you may encounter.',
+  description: "Our documentation is designed to empower you, helping you understand Justnote's features, navigate its interface, and troubleshoot any issues you may encounter.",
 };
 
-Our documentation is designed to empower you, helping you understand Brace.to's features, navigate its interface, and troubleshoot any issues you may encounter. Whether you're getting started, aiming for mastery, or facing challenges, our documentation will help you achieve what you want.
+Our documentation is designed to empower you, helping you understand Justnote's features, navigate its interface, and troubleshoot any issues you may encounter. Whether you're getting started, aiming for mastery, or facing challenges, our documentation will help you achieve what you want.
 
-## Brace.to: The TL;DR
+## Justnote: The TL;DR
 
-Brace.to is your bookmark manager with privacy at heart. Brace.to helps you save links to everything and visit them later easily, anytime, on any of your devices. Powered by Stacks technology, all your saved links are encrypted, and only you can decrypt them and see the content inside.
+Justnote is your privacy-focused note-taking app. Justnote helps you take notes easily anytime on any device. Powered by Stacks technology, all your saved notes are encrypted, and only you can decrypt them and see the content inside.
 
 <Image src={appScreenshot} alt="App Screenshot" priority={true} />
 
-There are several ways to save a link for your convenience. You can save a link:
-* At our website ([https://brace.to](https://brace.to))
-* In the web browser address bar by typing "brace.to" and "/" before any link
-* With our web browser extensions on your desktop
-* Via our mobile apps on your phone
-
-Then, you can visit your saved links anytime on any of your devices. Every link you save will be beautified with its representative image and title so you can easily find and recognize it.
+Justnote is a simple note-taking app, yet powerful enough. Our WYSIWYG-rich text editor has features like bold, underline, font color, and background color. You can take notes easily and quickly. Justnote is your quick note-taking app for your to-do lists, reminders, shopping lists, memos, thoughts, etc. Justnote is ubiquitous. You can use Justnote on any of your devices. All your notes are synced across your devices automatically.
 
 Powered by Web3 technology from Stacks:
 * Your account is cryptographically generated; only you, with your Secret Key, can control it. Your account cannot be locked, banned, or deleted by anyone, as your Secret Key is required to access and modify your account.
 * Everything is encrypted; only you, with your Secret Key, can see the content inside. No one can see the content inside your data, so it cannot be used to create targeted ads. If your data is stolen, no information is leaked.
 * Your data lives in a data server of your choice; only you, with your Secret Key, can change it. You can manage your data and set permissions directly, as you can host your own data server or choose any data server provider.
 
-Bring back control of your account and data one link at a time with Brace.to, powered by Web3 technology from Stacks, to ensure your privacy cannot be compromised. Not only that Brace.to doesn't be evil; Brace.to can't be.
+Bring back control of your account and data one note at a time with Justnote, powered by Web3 technology from Stacks, to ensure your privacy cannot be compromised. Not only that, Justnote doesn't be evil; Justnote can't be.
 
-Brace.to offers [one simple no-tricks subscription plan](https://brace.to/#pricing) to support us and unlock all extra features:
+Justnote offers [one simple no-tricks subscription plan](https://justnote.cc/#pricing) to support us and unlock all extra features:
 * Tags
-* Lock lists
-* Change title & image
+* Lock lists & notes
+* More font sizes
 * Dark appearance
+* Custom date format
+* Section by month
 * Pin to the top
 
 It's our intention to never show advertisements, and we don't rent, sell, or share your information with other companies. Our optional paid subscription is the only way we make money.
@@ -45,14 +41,14 @@ You can start by reading through the topics in the left-hand navigation or jump 
 
 ## What Next?
 
-### Brace.to's Features
+### Justnote's Features
 
-Looking to learn more about Brace.to's features? The "Features" section in the left navigation is where you want to go. This section explains everything Brace.to offers, from its core functionalities to extra features. Whether you are a new user or a pro, the Features section will help you know everything to utilize and unlock Brace.to's full potential.
+Looking to learn more about Justnote's features? The "Features" section in the left navigation is where you want to go. This section explains everything Justnote offers, from core functionalities to extra features. Whether a new user or a pro, the Features section will help you know everything to utilize and unlock Justnote's full potential.
 
 ### Basic Concepts
 
-Are you new to bookmarking or read-later apps? The "Brace.to 101" section is a great place to start. This introductory section explains what a bookmark manager is and how it differs from a read-later app.
+Are you new to note-taking apps or word processors? The "Justnote 101" section is a great place to start. This introductory section explains what a note-taking app is and how it differs from a word processor.
 
 ### Misc.
 
-This "Misc." section contains FAQs or Frequently Asked Questions. If you have any questions about Brace.to, this is an excellent place to start. Our FAQs section covers various topics, from general usage to feature functionality. If you can't find the answer you want here, don't hesitate to [contact us](https://brace.to/#support).
+This "Misc." section contains FAQs or Frequently Asked Questions. If you have questions about Justnote, this is an excellent place to start. Our FAQs section covers various topics, from general usage to feature functionality. If you can't find the answer you want here, don't hesitate to [contact us](https://justnote.cc/#support).
