--- a/src/mdx-files/account.mdx
+++ b/src/mdx-files/account.mdx
@@ -7,11 +7,11 @@ export const metadata = {
 
 Your account is cryptographically generated; only you, with your Secret Key, can control it.
 
-When you use Brace.to, your account is cryptographically generated. You'll receive a Secret Key — a unique set of 24 words that acts like a password — used to derive your account with cryptographic algorithms. Only you know your Secret Key and only your Secret Key can be used to create your account and make changes to it. **Your account cannot be locked, banned, or deleted by anyone, as your Secret Key is required to access and modify your account.**
+When you use Justnote, your account is cryptographically generated. You'll receive a Secret Key — a unique set of 24 words that acts like a password — used to derive your account with cryptographic algorithms. Only you know your Secret Key and only your Secret Key can be used to create your account and make changes to it. **Your account cannot be locked, banned, or deleted by anyone, as your Secret Key is required to access and modify your account.**
 
 ## Stacks Account
 
-Your account is [a Stacks account](https://docs.stacks.co/concepts/network-fundamentals/accounts), and a Stacks account is used to access [the Stacks blockchain](https://explorer.hiro.so) and [a Stacks data server](https://docs.stacks.co/concepts/gaia). The Stacks blockchain stores your account information, such as your username, profile, and data server location. A Stacks data server stores your encrypted app data, such as all your saved links.
+Your account is [a Stacks account](https://docs.stacks.co/concepts/network-fundamentals/accounts), and a Stacks account is used to access [the Stacks blockchain](https://explorer.hiro.so) and [a Stacks data server](https://docs.stacks.co/concepts/gaia). The Stacks blockchain stores your account information, such as your username, profile, and data server location. A Stacks data server stores your encrypted app data, such as all your saved notes.
 
 Your Secret Key acts like a password. It's only known to you, ensuring that only you can decrypt your data and see the content inside. If you lose it, there is no way to retrieve it back. You need to keep it safe.
 
