--- a/src/mdx-files/organize-notes.mdx
+++ b/src/mdx-files/organize-notes.mdx
@@ -41,3 +41,7 @@ Removed notes in Trash will be automatically permanently deleted after 45 days. 
 1. Click the 'Permanently delete' button under the note three-dot menu.
 
 2. To permanently delete multiple removed notes, click the 'Select notes' button in the top bar first. Select as many removed notes as you want. Then, choose the 'Permanently delete' button in the top bar or right panel.
+
+## Delete All Data
+
+Please go to Settings -> Data -> Delete All Data to delete all your data, including but not limited to all your saved notes in all lists, all your created lists, and all your settings. This will only remove all your data, not your account. You will still be able to sign in.
