Add Pin Notes and Tag Notes

--- a/src/mdx-files/import-export.mdx
+++ b/src/mdx-files/import-export.mdx
@@ -5,10 +5,10 @@ export const title = 'Import & Export';
 
 export const metadata = {
   title,
-  description: 'You can import data from a zip file and export all your data from the server to your device as a zip file.',
+  description: 'You can import data from a zip file and export all your data from the server to your device in a zip file.',
 };
 
-You can import data from a zip file and export all your data from the server to your device as a zip file.
+You can import data from a zip file and export all your data from the server to your device in a zip file.
 
 ## Import Data
 
