--- a/src/mdx-files/organize-notes.mdx
+++ b/src/mdx-files/organize-notes.mdx
@@ -34,6 +34,24 @@ Also, in Settings -> Lists, you can:
 
 Some buttons might be in the three-dot menu. Default lists — 'My Notes', 'Trash', and 'Archive' — can not be deleted. 'My Notes' is the default list when you share text with the mobile app. Trash is for removed notes only, and you can permanently delete them here.
 
+## Pin Notes
+
+You can choose notes to always stay on the top of the list, a.k.a. Pin to the top. There are two ways to do it:
+
+1. On any note, please choose a three-dot button -> 'Pin to the top'.
+2. To pin multiple notes to the top simultaneously, click the 'Select notes' button in the top bar first. Select as many notes as you want. Then, choose 'More actions' -> 'Pin to the top' in the top bar or right panel.
+
+To unpin notes from the top, please take similar steps but choose 'Manage pin' -> 'Unpin' instead. You can also move a pinned note up or down under the 'Manage pin'.
+
+## Tag Notes
+
+Each note can have multiple tags. Assigning a tag to a note enables you to list notes with the same tag, providing an additional method to browse notes, similar to lists and sublists.
+
+There are two ways to add or manage tags:
+
+1. On any note, please choose a three-dot button -> 'Add tags' or 'Manage tags'.
+2. To add or manage tags on multiple notes simultaneously, click the 'Select notes' button in the top bar first. Select as many notes as you want. Then, choose 'More actions' -> 'Manage tags' in the top bar or right panel.
+
 ## Delete Notes
 
 Removed notes in Trash will be automatically permanently deleted after 45 days. You can permanently delete any note in Trash immediately by:
